Corrige revisao da Fase 8